--- a/source/_data/contentful/spaces/cases.yaml
+++ b/source/_data/contentful/spaces/cases.yaml
@@ -5849,6 +5849,130 @@ resources:
   - Risks and Challenges
   - Data Responsibility
   - In Practice
+- sys:
+    id: 6AHAoC4Y2k4GkUMOCawKOM
+  authors: Andrew Young, Stefaan Verhulst
+  title: How the Data That Internet Companies Collect Can Be Used for the Public Good
+  publication: Harvard Business Review
+  pubDate: !ruby/object:DateTime 2018-01-23 00:00:00.000000000 Z
+  url: https://hbr.org/2018/01/how-the-data-that-internet-companies-collect-can-be-used-for-the-public-good
+  shortDescription: An article describing lessons learned regarding data collaboratives
+    built on leveraging social media intelligence
+  type:
+  - Magazine Article
+  theme:
+  - Benefits
+  - Data Responsibility
+  - In Practice
+- sys:
+    id: 1zREIWXA0c62OQim2WYoKs
+  authors: Iryna Susha, Marijn Janssen, Stefaan Verhulst
+  title: 'Data collaboratives as “bazaars”?: A review of coordination problems and
+    mechanisms to match demand for data with supply'
+  publication: 'Transforming Government: People, Process and Policy'
+  pubDate: !ruby/object:DateTime 2017-02-20 00:00:00.000000000 Z
+  url: http://www.emeraldinsight.com/doi/full/10.1108/TG-01-2017-0007#
+  annotation: |-
+    Purpose
+    In “data collaboratives”, private and public organizations coordinate their activities to leverage data to address a societal challenge. This paper aims to focus on analyzing challenges and coordination mechanisms of data collaboratives.
+
+    Design/methodology/approach
+    This study uses coordination theory to identify and discuss the coordination problems and coordination mechanisms associated with data collaboratives. The authors also use a taxonomy of data collaborative forms from a previous empirical study to discuss how different forms of data collaboratives may require different coordination mechanisms.
+
+    Findings
+    The study analyzed data collaboratives from the perspective of organizational and task levels. At the organizational level, the authors argue that data collaboratives present an example of the bazaar form of coordination. At the task level, the authors identified five coordination problems and discussed potential coordination mechanisms to address them, such as coordination by negotiation, by third party, by standardization, to name a few.
+
+    Research limitations/implications
+    This study is one of the first few to systematically analyze the phenomenon of “data collaboratives”.
+
+    Practical implications
+    This study can help practitioners better understand the coordination challenges they may face when initiating a data collaborative and to develop successful data collaboratives by using coordination mechanisms to mitigate these challenges.
+
+    Originality/value
+    Data collaboratives are a novel form of data-driven initiatives which have seen rapid experimentation lately. This study draws attention to this concept in the academic literature and highlights some of the complexities of organizing data collaboratives in practice.
+  type:
+  - Journal Article
+  theme:
+  - Data Responsibility
+- sys:
+    id: et0nHynsFqyOKMUQMyquc
+  authors: Gary King, Nate Persily
+  title: A New Model for Industry-Academic Partnerships
+  pubDate: !ruby/object:DateTime 2018-03-09 00:00:00.000000000 Z
+  url: https://gking.harvard.edu/partnerships
+  annotation: 'The mission of the academic social sciences is to understand and ameliorate
+    society’s greatest challenges. The data held by private companies holds vast potential
+    to further this mission. Yet, because of its interaction with highly politicized
+    issues, customer privacy, proprietary content, and differing goals of firms and
+    academics, these data are often inaccessible to university researchers. We propose
+    here a new model for industry-academic partnerships that addresses these problems
+    via a novel organizational structure: Respected scholars form a commission which,
+    as a trusted third party, receives access to all relevant firm information and
+    systems, and then recruits independent academics to do research in specific areas
+    following standard peer review protocols organized and funded by nonprofit foundations.
+    We also report on a partnership we helped forge under this model to make data
+    available about the extremely visible and highly politicized issues surrounding
+    the impact of social media on elections and democracy. In our partnership, Facebook
+    will provide privacy-preserving data and access; seven major politically and substantively
+    diverse nonprofit foundations will fund the research; and the Social Science Research
+    Council will oversee the peer review process for funding and data access.'
+  type:
+  - Paper
+  theme:
+  - General
+- sys:
+    id: 5DHFCjEdqwEyww2SGKAGCc
+  authors: Stefaan Verhulst, Andrew Young
+  title: How the Data That Internet Companies Collect Can Be Used for the Public Good
+  publication: Harvard Business Review
+  pubDate: !ruby/object:DateTime 2018-01-23 00:00:00.000000000 Z
+  url: https://hbr.org/2018/01/how-the-data-that-internet-companies-collect-can-be-used-for-the-public-good
+  shortDescription: Data collaboratives can help harness the value of data held by
+    the private sector and create a new added value that can address various public
+    issues. This article delineates the potential of public-private partnership for
+    data sharing, and proposes a data responsibility framework that serves as a guideline
+    as well as a safeguard to protect from the risks involved in data sharing.
+  type:
+  - Essay
+  theme:
+  - Data Responsibility
+- sys:
+    id: 2iofm2wfRWmAcEaCyU2wcc
+  authors: Stefaan Verhulst
+  title: 'Data responsibility: using corporate data to improve our lives'
+  publication: TedxMidAtlantic
+  pubDate: !ruby/object:DateTime 2017-06-23 00:00:00.000000000 Z
+  url: https://www.youtube.com/watch?v=Ff4xqofty5Q
+  shortDescription: Stefaan Verhulst’s latest work centers on how technology can improve
+    people’s lives and the creation of more effective and collaborative forms of governance.
+    Specifically, he is interested in the perils and promise of collaborative technologies
+    and how to harness the unprecedented volume of information to advance the public
+    good.
+  type:
+  - Paper
+  theme:
+  - Data Responsibility
+- sys:
+    id: mzQSQz3DAkoWysCSQQKMY
+  authors: Skipper Seabold, Andrea Coppola
+  title: 'Nowcasting Prices Using Google Trends: An Application to Central America'
+  publication: World Bank
+  pubDate: !ruby/object:DateTime 2015-08-31 00:00:00.000000000 Z
+  url: http://documents.worldbank.org/curated/en/861491467999367566/Nowcasting-prices-using-Google-trends-an-application-to-Central-America
+  shortDescription: This study seeks to assess the possibility of using Google Trends
+    data for forecasting price series in Central America. It discusses some of the
+    challenges inherent in working with it in the context of developing countries.
+    It finds that the addition of the Internet search index improves forecasting over
+    benchmark models in about 20 percent of the series and discusses the reasons for
+    the varied success and potential avenues for future research.
+  annotation: |
+    - Seabold and Coppola obtained the consumer price data from the statistical office of each country, and also Google Trends data on a number of search keywords and found that the Google Trends data improved nowcasts of price, compared to an ARMA model and other respective benchmarks
+    - They conclude by saying that "the study of the manifestation of consumer sentiment via Internet search behavior is very much still in its infancy. It certainly presents a number of challenges, but the potential insights and use cases are varied and exciting. It may be tempting to dismiss this excitement as hype. All the same, it is difficult to deny the possible benefits of real-time consumer sentiment to future economics research and forecasting studies."
+  type:
+  - Paper
+  theme:
+  - General
+  - Risks and Challenges
 projects:
 - sys:
     id: 4qXwV2Dbi8IOO8CO6uGCuK
